--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cam2us</title>
+    <title>eienpress</title>
 </head>
 <body>
 
@@ -12,8 +12,6 @@
         import main from './index.js';
         document.addEventListener('DOMContentLoaded', main);
     </script>
-
-    <h1> 어여와 camtous 는 첨이지? </h1>
 
     <div id="authtoken" >
         <!-- 인증키 입력 : <input ><button>submit</button> -->
