--- a/Apps/fileMng/index.html
+++ b/Apps/fileMng/index.html
@@ -17,8 +17,11 @@
 		<h1 id="userStatus"></h1>
 	</div>
 
+	<div class="menubar-container"></div>
 	<div class="root-container">
-		<div class="ui-container"></div>
+		
+		<div class="ui-container">
+		</div>
 		<div class="gl-container"></div>
 	</div>
 	
