object viwer update

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         <a href="/example/ex01_helloworld"> 바로가기</a>
     </div>
 
+    <div>
+        <h3>example 2. object viewer </h3>
+        <a href="/example/ex02_objectViewer"> 바로가기</a>
+    </div>
+
     
 
     
