--- a/example/ex02_objectViewer/index.html
+++ b/example/ex02_objectViewer/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>hello world</title>
+	<title>load fbx</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<link type="text/css" rel="stylesheet" href="main.css">
@@ -16,10 +16,8 @@
 	<div class="w3-container w3-red">
 		<h1 id="userStatus"></h1>
 	</div>
-
-	<div class="menubar-container"></div>
-	<div class="root-container">
-		<div class="gl-container"></div>
+	
+	<div class="body-container">
 	</div>
 	
 	<div class="modal-container"></div>
