--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         <h3>file manager </h3>
         <a href="/Apps/fileMng"> 바로가기</a>
     </div>
+    <div>
+        <h3>material manager </h3>
+        <a href="/Apps/materialMng"> 바로가기</a>
+    </div>
     <hr/>
     <div>
         <h3>example 1. hello world </h3>
