--- a/Apps/fileMng/index.html
+++ b/Apps/fileMng/index.html
@@ -35,17 +35,7 @@
 			{
 				"imports": {
 					"three": "/threejs/build/three.module.js",
-					"WebGL" : "/threejs/examples/jsm/capabilities/WebGL.js",
-					"OrbitControls" : "/threejs/examples/jsm/controls/OrbitControls.js",
-					"TransformControls" : "/threejs/examples/jsm/controls/TransformControls.js",
-					"state" : "/threejs/examples/jsm/libs/stats.module.js",
-                	"lil-gui" : "/threejs/examples/jsm/libs/lil-gui.module.min.js",
-					"GLTFExporter" : "/threejs/examples/jsm/exporters/GLTFExporter.js",
-					"GLTFLoader" : "/threejs/examples/jsm/loaders/GLTFLoader.js",
-					"DRACOLoader" : "/threejs/examples/jsm/loaders/DRACOLoader.js",
-					"RGBELoader" : "/threejs/examples/jsm/loaders/RGBELoader.js",
-					"EXRLoader" : "/threejs/examples/jsm/loaders/EXRLoader.js",
-					"fbxLoader" : "/threejs/examples/jsm/loaders/FBXLoader.js",
+					"three/addons/": "/threejs/examples/jsm/",
 					"evlis" : "/elvis/module/elvis5/core.js",
 					"md5" : "/modules/comLibs/md5.min.js"
 				}
