--- a/Apps/prefabMng/index.html
+++ b/Apps/prefabMng/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>hello world</title>
+	<title>prefab Manager</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<link type="text/css" rel="stylesheet" href="main.css">
@@ -32,8 +32,7 @@
 					"three": "/threejs/build/three.module.js",
 					"three/addons/": "/threejs/examples/jsm/",
 					"evlis" : "/elvis/module/elvis5/core.js",
-					"md5" : "/modules/comLibs/md5.min.js",
-                	"ideon/" : "/modules/comModules/"
+					"md5" : "/modules/comLibs/md5.min.js"
 				}
 			}
 	</script>
