--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <h3>material manager </h3>
         <a href="/Apps/materialMng"> 바로가기</a>
     </div>
+    <div>
+        <h3>prefab manager </h3>
+        <a href="/Apps/prefabMng"> 바로가기</a>
+    </div>
     <hr/>
     <div>
         <h3>example 1. hello world </h3>
