--- a/roby/index.html
+++ b/roby/index.html
@@ -17,7 +17,7 @@
 
     <div id="authtoken">
         <h2>로그인이 필요합니다.</h2>
-        <a href="./login">login window</a>
+        <a href="login?redirect=roby">login window</a>
     </div>
     <div id="authStatus" hidden>
         <h3></h3>
