--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
             <a href="/example/ex04_queditor"> 바로가기</a>
         </div>
 
+        <div>
+            <h3>example 5. msgNet sample </h3>
+            <a href="/example/ex05_msgNet"> 바로가기</a>
+        </div>
+
     </div>
 
 
