--- a/Apps/metaWalker/index.html
+++ b/Apps/metaWalker/index.html
@@ -43,6 +43,12 @@
 
 	<div id="joystick"></div>
 	<div class="modal-container w3-container"></div>
+	<div id="chatWindow" >
+		<input type="text" id="chatInput" placeholder="chat here" /><button id="chatSend">send</button>
+		<ul id="chatList">
+		</ul>
+
+	</div>
 
 	<script type="module">
 		import main from './index.js';
