targa file loader

--- a/index.html
+++ b/index.html
@@ -46,35 +46,8 @@
         </div>
 
         <div>
-            <h3>meta walker </h3>
-            <a href="/Apps/metaWalker?gid=634e8283526a0a6df4d8f5c1"> 바로가기</a>
-        </div>
-        
-
-        <hr />
-        <div>
-            <h3>example 1. hello world </h3>
-            <a href="/example/ex01_helloworld"> 바로가기</a>
-        </div>
-
-        <div>
-            <h3>example 2. object viewer </h3>
-            <a href="/example/ex02_objectViewer"> 바로가기</a>
-        </div>
-
-        <div>
-            <h3>example 3. sceneEditor </h3>
-            <a href="/example/ex03_sceneEditor"> 바로가기</a>
-        </div>
-
-        <div>
-            <h3>example 4. quEditor </h3>
-            <a href="/example/ex04_queditor"> 바로가기</a>
-        </div>
-
-        <div>
-            <h3>example 5. msgNet sample </h3>
-            <a href="/example/ex05_msgNet"> 바로가기</a>
+            <h3>로비 가기 </h3>
+            <a href="/roby"> 바로가기</a>
         </div>
 
     </div>
