file manager code refactoring

--- a/example/index.html
+++ b/example/index.html
@@ -5,14 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Example</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 </head>
 
 <body>
 
     <div>
+        <h3>example 0. anno </h3>
+        <a href="./ex00_anoni"> 바로가기</a>
+    </div>
+
+    <div>
         <h3>example 1. hello world </h3>
-        <a href="/ex01_helloworld"> 바로가기</a>
+        <a href="./ex01_helloworld"> 바로가기</a>
     </div>
 
     <div>
