--- a/example/ex00_anoni/index.html
+++ b/example/ex00_anoni/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>파일 관리자</title>
+	<title> Anoni </title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<link type="text/css" rel="stylesheet" href="main.css">
@@ -13,10 +13,7 @@
 </head>
 
 <body>
-	<div class="w3-container w3-red">
-		<h1 id="userStatus"></h1>
-	</div>
-
+	
 	<div class="body-container">
 	</div>
 	
@@ -32,7 +29,8 @@
 					"three": "/threejs/build/three.module.js",
 					"three/addons/": "/threejs/examples/jsm/",
 					"evlis" : "/elvis/module/elvis5/core.js",
-					"md5" : "/modules/comLibs/md5.min.js"
+					"md5" : "/modules/comLibs/md5.min.js",
+                	"ideon/" : "/modules/comModules/"
 				}
 			}
 	</script>
